scratch/oxcaml_research/phase1_pure_data_probe/results/compile.out
== pure_data_parallel_positive (pass) ==
PASS expected-pass pure_data_parallel_positive
== portable_function_payload_negative (fail) ==
File "scratch/oxcaml_research/phase1_pure_data_probe/portable_function_payload_negative.ml", line 1, characters 0-49:
1 | type bad : immutable_data = { run : unit -> int }
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The kind of type "bad" is value mod immutable non_float
         because it's a boxed record type.
       But the kind of type "bad" must be a subkind of immutable_data
         because of the annotation on the declaration of the type bad.
PASS expected-fail portable_function_payload_negative
== portable_ref_payload_negative (fail) ==
File "scratch/oxcaml_research/phase1_pure_data_probe/portable_ref_payload_negative.ml", line 1, characters 0-47:
1 | type bad : immutable_data = { count : int ref }
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The kind of type "bad" is mutable_data
         because it's a boxed record type.
       But the kind of type "bad" must be a subkind of immutable_data
         because of the annotation on the declaration of the type bad.
PASS expected-fail portable_ref_payload_negative
== sampler_field_escape_negative (fail) ==
File "scratch/oxcaml_research/phase1_pure_data_probe/sampler_field_escape_negative.ml", line 1, characters 36-42:
1 | let value = Effet.Sampler.always_on.sample
                                        ^^^^^^
Error: Unbound record field "sample"
PASS expected-fail sampler_field_escape_negative
summary: pass=4 fail=0
